--- a/templates/index.html
+++ b/templates/index.html
@@ -107,7 +107,7 @@
 
                     <span class="copyright-theme">
                         <span class="copyright-theme-sep">:: </span>
-                        Theme: <a href="https://github.com/pawroman/zola-theme-terminimal/">Terminimal</a> by pawroman
+                        Theme: <a href="https://sirotenkosergey.github.io/-citizen-blog/">Terminimal</a> by pawroman
                     </span>
                 </div>
             {% endif -%}
