--- a/sass/color/blue.scss
+++ b/sass/color/blue.scss
@@ -3,7 +3,7 @@
   --accent-alpha-70: rgba(35,176,255,.7);
   --accent-alpha-20: rgba(35,176,255,.2);
 
-  --background: #1D212C;
+  --background: #00ffff;
   --color: white;
   --border-color: rgba(255, 255, 255, .1);
 }
