--- a/templates/tags/list.html
+++ b/templates/tags/list.html
@@ -2,7 +2,7 @@
 
 {% block content %}
     <div class="post">
-        <h1 class="post-title">all tags</h1>
+        <h1 class="post-title">all tags 123</h1>
 
         <ul>
             {% for term in terms %}
