--- a/sass/color/blue.scss
+++ b/sass/color/blue.scss
@@ -1,9 +1,9 @@
 :root {
-  --accent: rgb(35,176,255);
+  --accent: rgb(0,255,255);
   --accent-alpha-70: rgba(35,176,255,.7);
   --accent-alpha-20: rgba(35,176,255,.2);
 
-  --background: #00ffff;
+  --background: #000000;
   --color: white;
   --border-color: rgba(255, 255, 255, .1);
 }
