--- a/templates/index.html
+++ b/templates/index.html
@@ -39,7 +39,7 @@
                         {%- if config.extra.logo_text %}
                             {{ config.extra.logo_text }}
                         {% else %}
-                            Terminimal theme
+                            Citizen Cosmos
                         {% endif -%}
                         {% endblock logo_content %}
                     </div>
@@ -102,13 +102,9 @@
                     {%- if config.extra.author %}
                         <span>© {{ date_macros::now_year() }} {{ config.extra.author }}</span>
                     {% else %}
-                        <span>© {{ date_macros::now_year() }} Powered by <a href="https://www.getzola.org/">Zola</a></span>
+                        <span>© {{ date_macros::now_year() }} Powered by <a href="https://www.citizencosmos.space/">Citizen Cosmos</a></span>
                     {% endif -%}
 
-                    <span class="copyright-theme">
-                        <span class="copyright-theme-sep">:: </span>
-                        Theme: <a href="https://sirotenkosergey.github.io/-citizen-blog/">Terminimal</a> by pawroman
-                    </span>
                 </div>
             {% endif -%}
         </div>
