--- a/templates/index.html
+++ b/templates/index.html
@@ -114,6 +114,7 @@
 </div>
 {%- block extra_body %}
 {% endblock extra_body -%}
+<script defer data-domain="citizenweb3.github.io/manuscripts" src="https://plausible.io/js/script.js"></script>
 </body>
 
 </html>
